# spyfallAI

./: .env.example  .gitignore  FEATURES.md  README.md  llm_config.json  locations.json  progress.md  pyproject.toml  ralph.sh  tasks.json  trigger_rules.json  vote_trigger_rules.json
characters/: aurora.json  boris_molot.json  father_ignatius.json  kim.json  lyokha.json  margo.json  professor_stein.json  zoya.json
docs/: AR-001-report.md  AR-001-triggers-and-characters-audit.md  CR-001-pre-final-vote-defense.md  CR-002-triggers-and-reactions-fix.md  CR-003-post-game-analysis.md  PRD-SpyfallAI-2026-04-19.md  PRD-Visualizer-v0.3.md  agent_response_format.json
games/: 2026-04-20_08-56-41_bbb6b856-1919-475e-aca9-234ac69c3b0c.json  2026-04-20_09-08-59_bfd715e5-39be-4480-a143-a5e25827741c.json  2026-04-20_09-44-46_7bdb7aa9-4802-4399-ab8e-d453e403a833.json  2026-04-20_09-57-41_80ad02a0-e3f0-44fd-a917-5344c95ce02a.json  2026-04-20_10-25-01_f2f98f55-0b33-41d0-a5e0-4c9af68e0e00.json  2026-04-20_11-17-01_a8b7bc2f-cd5a-42a5-beb4-165be42a751a.json  2026-04-20_19-42-36_445744de-4521-4e2f-b961-a29ae3113225.json  2026-04-20_19-47-53_a64e5243-95b8-4273-b2a4-167baa6e0a42.json  2026-04-20_21-15-42_2ff1a6e1-925d-4d5d-a4cd-c2d7bbaf01f3.json  2026-04-20_21-39-02_534d43ad-1462-4593-8c7e-439a3d67da2b.json  2026-04-20_22-01-52_d6a7dec0-48e8-4687-84a8-662aba9725ba.json  2026-04-20_22-24-56_5be341b5-8578-411e-971b-4635617b950f.json  2026-04-20_22-40-36_2ebe02a6-8ac5-4094-8641-de4869d0f2b1.json  2026-04-20_22-47-11_9c0068a2-4708-46fd-b4a1-2ccb81f791c6.json  (+40 more)
src/: __init__.py  analyze.py  cli.py
(+157 files in other folders)
